@@ -14,6 +14,7 @@
 - Tuning of the internal buffer code for feeder mode to minimize its performance impact (works in 4K blocks now).
 - Workaround for compiler bugs in Open64/PathScale/SunStudio (bug 3004396, suggestion by Doug Gilmore).
 - Make mpg123_getformat() return more error codes (like MPG123_NEED_MORE).
+- Fix handle I/O for clients with small file offset (32 bit when libmpg123 has 64 bit).
 
 1.12.1
 ---
